--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link href="assets/css.css" rel="stylesheet">
     </head>
 <body>  
+    <div style="background-color: black;width: 100%;text-align: center;font-size: 15px; position: fixed; top: 0;">This website is currently being built. piece by piece</div>
     <div class="stars"></div>
 
 <div class="container">
@@ -46,7 +47,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-10 col-md-12">
+                        <div class="col-lg-12 col-md-12">
                             <nav class="navbar navbar-expand-lg navbar-dark">
                                 <div class="container-fluid">
                                     <a class="navbar-brand" href="#">valk7am</a>
@@ -56,47 +57,65 @@
                                     <div id="navbarViews" class="collapse navbar-collapse navigation">
                                         <ul class="navbar-nav ms-auto py-2"> 
                                             <li>
-                                                <a class="show-toggle active py-2" href="#" data-target="#Overview">Overview</a>
+                                                <a class="show-toggle active py-2" href="#" data-target="#Overview">
+                                                    <span>
+                                                        Overview
+                                                    </span>
+                                                </a>
                                             </li>
                                             <li>
-                                                <a class="show-toggle py-2" href="#" data-target="#About">About</a>
+                                                <a class="show-toggle py-2" href="#" data-target="#About">
+                                                    <span>
+                                                        About
+                                                    </span> 
+                                                </a>
                                             </li>
                                             <li>
-                                                <a class="show-toggle py-2" href="#" data-target="#Projects">Projects</a>
+                                                <a class="show-toggle py-2" href="#" data-target="#Projects">
+                                                    <span>
+                                                        Projects
+                                                    </span> 
+                                                </a>
                                             </li>                    
                                             <li>
-                                                <a class="show-toggle py-2" href="#" data-target="#Achivmenets">Achivmenets</a>
+                                                <a class="show-toggle py-2" href="#" data-target="#Achivmenets">
+                                                    <span>
+                                                        Achivmenets
+                                                    </span> 
+                                                </a>
                                             </li>
                                             <li>
-                                                <a class="show-toggle py-2" href="#" data-target="#Socials">Socials</a>
+                                                <a class="show-toggle py-2" href="#" data-target="#Socials">
+                                                    <span>
+                                                        Socials
+                                                    </span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <div class="search">
+                                                    <!-- Search Button -->
+                                                    <button id="searchTrigger" class="search-button">
+                                                        Search...<kbd class="keyboard">Ctrl+K</kbd>
+                                                    </button>
+                                                </div>
                                             </li>
                                         </ul>
                                     </div>
                                 </div>
                             </nav>
                         </div>
-                        <div class="col-lg-2">
-                        <!-- <div style="float: right;">
-                            <div class="action-button">
-                                <a href="#" style="font-size: 24px;font-weight: bold;">:::</a> 
-                            </div>
-                            <div class="action-menu collapsed">
-                                <div class="p-1">
-                                    <ul>
-                                        <li>
-                                            <a href="#"> Long Strip </a>
-                                        </li>
-                                        <li>
-                                            <a href="#"> Taps </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div> -->
-                        </div>
+                        
                     </div>
                 </div>          
             </div>
+                 <!-- Search Modal -->
+                 <div id="searchModal" class="search-modal" style="display:none;">
+                    <div class="search-box">
+                    <input type="text" placeholder="Type to search..." />
+                    <button id="closeSearch">✖</button>
+                    </div>
+                </div>
+
         </header>
 
   
@@ -136,7 +155,7 @@
                 <div class="wall">
                     <div class="row g-2">
                         <div class="col-lg-6 col-md-12">
-                            <a href="https://github.com/Valk7am">
+                            <a target="_blank" href="https://github.com/Valk7am">
                                 <div class="github-profile pop-out-when-in">
                                     <div class="github-profile-text">
                                     
@@ -154,7 +173,7 @@
                             </a>
                         </div>
                         <div class="col-lg-4 col-md-10">
-                            <a href="https://github.com/Valk7am">
+                            <a target="_blank" href="https://github.com/Valk7am">
                                 <div class="github-progress pop-out-when-in">
                                     <div class="github-progress-chart"></div>
                                     <div class="d-flex justify-content-evenly align-items-center">
@@ -172,7 +191,7 @@
                             </a>
                         </div>
                         <div class="col-lg-2 col-md-2">
-                            <a href="https://youtu.be/h8Q_J0M2HSs?t=50">
+                            <a target="_blank" href="https://youtu.be/h8Q_J0M2HSs?t=50">
                                 <div class="quran pop-out-when-in">
                                     <!-- <h1>
                                         سورة الأنسان
@@ -184,7 +203,7 @@
                         <div class="col-lg-6 col-md-12">
                             <div class="row g-1">
                                 <div class="col-2">
-                                    <a href="#">
+                                    <a target="_blank" href="#">
                                         <div class="pop-out-when-in mystery flex-center">
                                             <svg width="21" height="21" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M80 160c0-35.3 28.7-64 64-64l32 0c35.3 0 64 28.7 64 64l0 3.6c0 21.8-11.1 42.1-29.4 53.8l-42.2 27.1c-25.2 16.2-40.4 44.1-40.4 74l0 1.4c0 17.7 14.3 32 32 32s32-14.3 32-32l0-1.4c0-8.2 4.2-15.8 11-20.2l42.2-27.1c36.6-23.6 58.8-64.1 58.8-107.7l0-3.6c0-70.7-57.3-128-128-128l-32 0C73.3 32 16 89.3 16 160c0 17.7 14.3 32 32 32s32-14.3 32-32zm80 320a40 40 0 1 0 0-80 40 40 0 1 0 0 80z"/></svg>
                                             <span>Mystery</span>
@@ -194,7 +213,7 @@
                                 <div class="col-10">
                                     <div class="row g-1">
                                         <div class="col-lg-6 col-md-6">
-                                            <a href="https://x.com/mh_abuhassan">
+                                            <a target="_blank" href="https://x.com/mh_abuhassan">
                                                 <div class="pop-out-when-in twitter flex-center">
                                                     <svg width="21" height="21" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"/></svg>
                                                     <span>X</span>
@@ -202,7 +221,7 @@
                                             </a>
                                         </div>
                                         <div class="col-lg-6 col-md-6">
-                                            <a href="https://www.linkedin.com/in/mahmoud-abu-hassan-06111b235/">
+                                            <a target="_blank" href="https://www.linkedin.com/in/mahmoud-abu-hassan-06111b235/">
                                                 <div class="pop-out-when-in linkdin flex-center">
                                                     <svg width="21" height="21" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M100.3 448H7.4V148.9h92.9zM53.8 108.1C24.1 108.1 0 83.5 0 53.8a53.8 53.8 0 0 1 107.6 0c0 29.7-24.1 54.3-53.8 54.3zM447.9 448h-92.7V302.4c0-34.7-.7-79.2-48.3-79.2-48.3 0-55.7 37.7-55.7 76.7V448h-92.8V148.9h89.1v40.8h1.3c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V448z"/></svg>
                                                     <span>Linkdin</span>
@@ -210,7 +229,7 @@
                                             </a>
                                         </div>
                                         <div class="col-lg-6 col-md-6">
-                                            <a href="https://www.youtube.com/@mh97-abuhassan">
+                                            <a target="_blank" href="https://www.youtube.com/@mh97-abuhassan">
                                                 <div class="pop-out-when-in youtube flex-center">
                                                     <svg width="21" height="21" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M549.7 124.1c-6.3-23.7-24.8-42.3-48.3-48.6C458.8 64 288 64 288 64S117.2 64 74.6 75.5c-23.5 6.3-42 24.9-48.3 48.6-11.4 42.9-11.4 132.3-11.4 132.3s0 89.4 11.4 132.3c6.3 23.7 24.8 41.5 48.3 47.8C117.2 448 288 448 288 448s170.8 0 213.4-11.5c23.5-6.3 42-24.2 48.3-47.8 11.4-42.9 11.4-132.3 11.4-132.3s0-89.4-11.4-132.3zm-317.5 213.5V175.2l142.7 81.2-142.7 81.2z"/></svg>
                                                     <span>Youtube</span>
@@ -218,7 +237,7 @@
                                             </a>
                                         </div>
                                         <div class="col-lg-6 col-md-6">
-                                        <a href="https://codepen.io/Mahmoud-Abu-Hassan">
+                                        <a target="_blank" href="https://codepen.io/Mahmoud-Abu-Hassan">
                                             <div class="pop-out-when-in codepen flex-center">
                                                 <svg width="21" height="21" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M502.3 159.7l-234-156c-8-4.9-16.5-5-24.6 0l-234 156C3.7 163.7 0 170.8 0 178v156c0 7.1 3.7 14.3 9.7 18.3l234 156c8 4.9 16.5 5 24.6 0l234-156c6-4 9.7-11.1 9.7-18.3V178c0-7.1-3.7-14.3-9.7-18.3zM278 63.1l172.3 114.9-76.9 51.4L278 165.7V63.1zm-44 0v102.6l-95.4 63.7-76.9-51.4L234 63.1zM44 219.1l55.1 36.9L44 292.8v-73.7zm190 229.7L61.7 334l76.9-51.4L234 346.3v102.6zm22-140.9l-77.7-52 77.7-52 77.7 52-77.7 52zm22 140.9V346.3l95.4-63.7 76.9 51.4L278 448.8zm190-156l-55.1-36.9L468 219.1v73.7z"/></svg>
                                                 <span>Codepen</span>
@@ -232,7 +251,7 @@
                         <div class="col-lg-6 col-md-12">
                             <div class="row g-1">
                                 <div class="col-lg-3 col-md-12">
-                                    <a href="https://www.twitch.tv/7am7od">
+                                    <a target="_blank" href="https://www.twitch.tv/7am7od">
                                         <div class="pop-out-when-in twitch flex-center">
                                             <svg width="21" height="21" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M391.2 103.5H352.5v109.7h38.6zM285 103H246.4V212.8H285zM120.8 0 24.3 91.4V420.6H140.1V512l96.5-91.4h77.3L487.7 256V0zM449.1 237.8l-77.2 73.1H294.6l-67.6 64v-64H140.1V36.6H449.1z"/></svg>
                                             <span>Twitch</span>
