--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link href="assets/css.css" rel="stylesheet">
     </head>
 <body>  
-    <div style="background-color: black;width: 100%;text-align: center;font-size: 15px; position: fixed; top: 0;">This website is currently being built. piece by piece</div>
+    <div style="background-color: black;width: 100%;text-align: center;font-size: 15px; position: fixed; top: 0;z-index: 100;">This website is currently being built. piece by piece</div>
     <div class="stars"></div>
 
 <div class="container">
@@ -78,9 +78,9 @@
                                                 </a>
                                             </li>                    
                                             <li>
-                                                <a class="show-toggle py-2" href="#" data-target="#Achivmenets">
+                                                <a class="show-toggle py-2" href="#" data-target="#Blogs">
                                                     <span>
-                                                        Achivmenets
+                                                        Blogs
                                                     </span> 
                                                 </a>
                                             </li>
@@ -213,10 +213,10 @@
                                 <div class="col-10">
                                     <div class="row g-1">
                                         <div class="col-lg-6 col-md-6">
-                                            <a target="_blank" href="https://x.com/mh_abuhassan">
-                                                <div class="pop-out-when-in twitter flex-center">
-                                                    <svg width="21" height="21" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"/></svg>
-                                                    <span>X</span>
+                                            <a target="_blank" href="https://www.twitch.tv/7am7od">
+                                                <div class="pop-out-when-in twitch flex-center">
+                                                    <svg width="21" height="21" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M391.2 103.5H352.5v109.7h38.6zM285 103H246.4V212.8H285zM120.8 0 24.3 91.4V420.6H140.1V512l96.5-91.4h77.3L487.7 256V0zM449.1 237.8l-77.2 73.1H294.6l-67.6 64v-64H140.1V36.6H449.1z"/></svg>
+                                                    <span>Twitch</span>
                                                 </div>
                                             </a>
                                         </div>
@@ -250,19 +250,33 @@
                         </div>
                         <div class="col-lg-6 col-md-12">
                             <div class="row g-1">
-                                <div class="col-lg-3 col-md-12">
-                                    <a target="_blank" href="https://www.twitch.tv/7am7od">
-                                        <div class="pop-out-when-in twitch flex-center">
-                                            <svg width="21" height="21" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M391.2 103.5H352.5v109.7h38.6zM285 103H246.4V212.8H285zM120.8 0 24.3 91.4V420.6H140.1V512l96.5-91.4h77.3L487.7 256V0zM449.1 237.8l-77.2 73.1H294.6l-67.6 64v-64H140.1V36.6H449.1z"/></svg>
-                                            <span>Twitch</span>
+                                <div class="col-lg-5 col-md-12">
+                                    <a target="_blank" href="https://x.com/mh_abuhassan">
+                                        <div class="pop-out-when-in twitter">
+                                            <svg width="21" height="21" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"/></svg>
+                                            <span>X</span>
+                                        </div>
+                                    </a>
+                                    <a class="twitter-timeline pop-out-when-in twitter" data-lang="en" data-height="300" data-theme="dark" href="https://twitter.com/mh_abuhassan?ref_src=twsrc%5Etfw">Tweets by Valk7am</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>                                
+                                </div>
+                                <div class="col-lg-7 col-md-12">
+                                    <a target="_blank" href="https://x.com/mh_abuhassan">
+                                        <div class="pop-out-when-in blog-mini">
+                                            <div class="blogs-brief">
+                                                <h3>
+                                                    <svg width="35" height="35" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M0 96C0 43 43 0 96 0L384 0l32 0c17.7 0 32 14.3 32 32l0 320c0 17.7-14.3 32-32 32l0 64c17.7 0 32 14.3 32 32s-14.3 32-32 32l-32 0L96 512c-53 0-96-43-96-96L0 96zM64 416c0 17.7 14.3 32 32 32l256 0 0-64L96 384c-17.7 0-32 14.3-32 32zm90.4-234.4l-21.2-21.2c-3 10.1-5.1 20.6-5.1 31.6c0 .2 0 .5 .1 .8s.1 .5 .1 .8L165.2 226c2.5 2.1 3.4 5.8 2.3 8.9c-1.3 3-4.1 5.1-7.5 5.1c-1.9-.1-3.8-.8-5.2-2l-23.6-20.6C142.8 267 186.9 304 240 304s97.3-37 108.9-86.6L325.3 238c-1.4 1.2-3.3 2-5.3 2c-2.2-.1-4.4-1.1-6-2.8c-1.2-1.5-1.9-3.4-2-5.2c.1-2.2 1.1-4.4 2.8-6l37.1-32.5c0-.3 0-.5 .1-.8s.1-.5 .1-.8c0-11-2.1-21.5-5.1-31.6l-21.2 21.2c-3.1 3.1-8.1 3.1-11.3 0s-3.1-8.1 0-11.2l26.4-26.5c-8.2-17-20.5-31.7-35.9-42.6c-2.7-1.9-6.2 1.4-5 4.5c8.5 22.4 3.6 48-13 65.6c-3.2 3.4-3.6 8.9-.9 12.7c9.8 14 12.7 31.9 7.5 48.5c-5.9 19.4-22 34.1-41.9 38.3l-1.4-34.3 12.6 8.6c.6 .4 1.5 .6 2.3 .6c1.5 0 2.7-.8 3.5-2s.6-2.8-.1-4L260 225.4l18-3.6c1.8-.4 3.1-2.1 3.1-4s-1.4-3.5-3.1-3.9l-18-3.7 8.5-14.3c.8-1.2 .9-2.9 .1-4.1s-2-2-3.5-2l-.1 0c-.7 .1-1.5 .3-2.1 .7l-14.1 9.6L244 87.9c-.1-2.2-1.9-3.9-4-3.9s-3.9 1.6-4 3.9l-4.6 110.8-12-8.1c-1.5-1.1-3.6-.9-5 .4s-1.6 3.4-.8 5l8.6 14.3-18 3.7c-1.8 .4-3.1 2-3.1 3.9s1.4 3.6 3.1 4l18 3.8-8.6 14.2c-.2 .6-.5 1.4-.5 2c0 1.1 .5 2.1 1.2 3c.8 .6 1.8 1 2.8 1c.7 0 1.6-.2 2.2-.6l10.4-7.1-1.4 32.8c-19.9-4.1-36-18.9-41.9-38.3c-5.1-16.6-2.2-34.4 7.6-48.5c2.7-3.9 2.3-9.3-.9-12.7c-16.6-17.5-21.6-43.1-13.1-65.5c1.2-3.1-2.3-6.4-5-4.5c-15.3 10.9-27.6 25.6-35.8 42.6l26.4 26.5c3.1 3.1 3.1 8.1 0 11.2s-8.1 3.1-11.2 0z"/></svg>
+                                                    Leatest Post <span>July,25 2025</span>
+                                                </h3>
+                                                <p>
+                                                    Intoduction to Jira
+                                                </p>
+                                            </div>
                                         </div>
                                     </a>
                                 </div>
-                                <div class="col-lg-9 col-md-12">
-                                </div>
-                                <div class="col-lg-6 col-md-12">
+                                <!-- <div class="col-lg-6 col-md-12">
                                     
-                                </div>
+                                </div> -->
                             </div>
                         </div>
 
@@ -335,7 +349,7 @@
             </h1>
         </div>
         </section>
-        <section id="Achivmenets" class="col-lg-12 col-md-12">
+        <section id="Blogs" class="col-lg-12 col-md-12">
         <div clas="container">
             <h1>
                 Soon
