--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html dir="ltr">
     <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=0.9" />
+        <meta name="description" content="Mahmoud Abuhassan website" />
+        <meta name="author" content="Mahmoud Abuhassan" />
+      
+        <title>Valk7am space</title>
+        <link rel="icon" href="assets/images/icon.png">
+
         <link href="assets/bootstrap.css" rel="stylesheet">
         <link href="assets/css.css" rel="stylesheet">
     </head>
