--- a/index.html
+++ b/index.html
@@ -218,7 +218,12 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-lg-4 col-9">
+                        <div class="col-lg-6 col-md-12">
+                            <div id="featuredPost">
+
+                            </div>
+                        </div>
+                        <!-- <div class="col-lg-4 col-9">
                             <a target="_blank" href="https://github.com/Valk7am">
                                 <div class="github-progress pop-out-when-in">
                                     <div class="github-progress-chart"></div>
@@ -239,26 +244,26 @@
                         <div class="col-lg-2 col-3">
                             <a target="_blank" href="https://youtu.be/h8Q_J0M2HSs?t=50">
                                 <div class="quran pop-out-when-in">
-                                    <!-- <h1>
+                                    <h1>
                                         سورة الأنسان
-                                    </h1> -->
+                                    </h1>
                                 </div>
                             </a>
-                        </div>
+                        </div> -->
 
                         <div class="col-lg-6 col-md-12">
                             <div class="row g-1">
-                                <div class="col-2">
-                                    <a target="_blank" href="#">
+                                <div class="col-lg-2 col-md-3">
+                                    <a target="_blank" href="https://youtu.be/h8Q_J0M2HSs?t=50">
                                         <div class="pop-out-when-in mystery social-wall flex-center">
                                             <svg width="21" height="21" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M80 160c0-35.3 28.7-64 64-64l32 0c35.3 0 64 28.7 64 64l0 3.6c0 21.8-11.1 42.1-29.4 53.8l-42.2 27.1c-25.2 16.2-40.4 44.1-40.4 74l0 1.4c0 17.7 14.3 32 32 32s32-14.3 32-32l0-1.4c0-8.2 4.2-15.8 11-20.2l42.2-27.1c36.6-23.6 58.8-64.1 58.8-107.7l0-3.6c0-70.7-57.3-128-128-128l-32 0C73.3 32 16 89.3 16 160c0 17.7 14.3 32 32 32s32-14.3 32-32zm80 320a40 40 0 1 0 0-80 40 40 0 1 0 0 80z"/></svg>
                                             <span>Mystery</span>
                                         </div>
                                     </a>
                                 </div>
-                                <div class="col-10">
+                                <div class="col-lg-10 col-md-9">
                                     <div class="row g-1">
-                                        <div class="col-lg-6 col-md-6">
+                                        <div class="col-3 col-lg-6 col-md-6">
                                             <a target="_blank" href="https://www.twitch.tv/7am7od">
                                                 <div class="pop-out-when-in twitch social-wall flex-center">
                                                     <svg width="21" height="21" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M391.2 103.5H352.5v109.7h38.6zM285 103H246.4V212.8H285zM120.8 0 24.3 91.4V420.6H140.1V512l96.5-91.4h77.3L487.7 256V0zM449.1 237.8l-77.2 73.1H294.6l-67.6 64v-64H140.1V36.6H449.1z"/></svg>
@@ -266,7 +271,7 @@
                                                 </div>
                                             </a>
                                         </div>
-                                        <div class="col-lg-6 col-md-6">
+                                        <div class="col-3 col-lg-6 col-md-6">
                                             <a target="_blank" href="https://www.linkedin.com/in/mahmoud-abu-hassan-06111b235/">
                                                 <div class="pop-out-when-in linkdin social-wall flex-center">
                                                     <svg width="21" height="21" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M100.3 448H7.4V148.9h92.9zM53.8 108.1C24.1 108.1 0 83.5 0 53.8a53.8 53.8 0 0 1 107.6 0c0 29.7-24.1 54.3-53.8 54.3zM447.9 448h-92.7V302.4c0-34.7-.7-79.2-48.3-79.2-48.3 0-55.7 37.7-55.7 76.7V448h-92.8V148.9h89.1v40.8h1.3c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V448z"/></svg>
@@ -274,7 +279,7 @@
                                                 </div>
                                             </a>
                                         </div>
-                                        <div class="col-lg-6 col-md-6">
+                                        <div class="col-3 col-lg-6 col-md-6">
                                             <a target="_blank" href="https://www.youtube.com/@mh97-abuhassan">
                                                 <div class="pop-out-when-in youtube social-wall flex-center">
                                                     <svg width="21" height="21" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M549.7 124.1c-6.3-23.7-24.8-42.3-48.3-48.6C458.8 64 288 64 288 64S117.2 64 74.6 75.5c-23.5 6.3-42 24.9-48.3 48.6-11.4 42.9-11.4 132.3-11.4 132.3s0 89.4 11.4 132.3c6.3 23.7 24.8 41.5 48.3 47.8C117.2 448 288 448 288 448s170.8 0 213.4-11.5c23.5-6.3 42-24.2 48.3-47.8 11.4-42.9 11.4-132.3 11.4-132.3s0-89.4-11.4-132.3zm-317.5 213.5V175.2l142.7 81.2-142.7 81.2z"/></svg>
@@ -282,7 +287,7 @@
                                                 </div>
                                             </a>
                                         </div>
-                                        <div class="col-lg-6 col-md-6">
+                                        <div class="col-3 col-lg-6 col-md-6">
                                         <a target="_blank" href="https://codepen.io/Mahmoud-Abu-Hassan">
                                             <div class="pop-out-when-in codepen social-wall flex-center">
                                                 <svg width="21" height="21" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M502.3 159.7l-234-156c-8-4.9-16.5-5-24.6 0l-234 156C3.7 163.7 0 170.8 0 178v156c0 7.1 3.7 14.3 9.7 18.3l234 156c8 4.9 16.5 5 24.6 0l234-156c6-4 9.7-11.1 9.7-18.3V178c0-7.1-3.7-14.3-9.7-18.3zM278 63.1l172.3 114.9-76.9 51.4L278 165.7V63.1zm-44 0v102.6l-95.4 63.7-76.9-51.4L234 63.1zM44 219.1l55.1 36.9L44 292.8v-73.7zm190 229.7L61.7 334l76.9-51.4L234 346.3v102.6zm22-140.9l-77.7-52 77.7-52 77.7 52-77.7 52zm22 140.9V346.3l95.4-63.7 76.9 51.4L278 448.8zm190-156l-55.1-36.9L468 219.1v73.7z"/></svg>
@@ -296,24 +301,58 @@
                         </div>
                         <div class="col-lg-6 col-md-12">
                             <div class="row g-1">
-                                <div class="col-lg-3 col-md-12">
+                                <div class="col-3">
                                     <a target="_blank" href="https://x.com/mh_abuhassan">
                                         <div class="pop-out-when-in twitter social-wall flex-center">
                                             <svg width="21" height="21" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"/></svg>
                                             <!-- <span>X</span> -->
                                             <span>
-                                                it's toxic here, be careful.
+                                               Politics
                                             </span>
                                         </div>
                                     </a>
                                 </div>
-                                <div class="col-lg-9 col-md-12">
-                                    <div id="featuredPost">
-
-                                    </div>
+                                <div class="col-9">
+                                    <div class="under-construction">
+                                        <!-- Background blurred text -->
+                                        <div class="blur-overlay">
+                                          <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 256 256">
+                                            <path d="M208,32V192H72a24,24,0,0,0-24,24V56A24,24,0,0,1,72,32Z" opacity="0.2"></path>
+                                            <path d="M208,24H72A32,32,0,0,0,40,56V224a8,8,0,0,0,8,8H192a8,8,0,0,0,0-16H56a16,16,0,0,1,16-16H208a8,8,0,0,0,8-8V32A8,8,0,0,0,208,24Zm-8,160H72a31.82,31.82,0,0,0-16,4.29V56A16,16,0,0,1,72,40H200Z"></path>
+                                          </svg>
+                                          <span>Project X</span>
+                                        </div>
+                                    
+                                        <!-- Foreground visible content -->
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 256 256">
+                                          <path d="M226.76,69a8,8,0,0,0-12.84-2.88l-40.3,37.19-17.23-3.7-3.7-17.23,37.19-40.3A8,8,0,0,0,187,29.24,72,72,0,0,0,88,96,72.34,72.34,0,0,0,94,124.94L33.79,177c-.15.12-.29.26-.43.39a32,32,0,0,0,45.26,45.26c.13-.13.27-.28.39-.42L131.06,162A72,72,0,0,0,232,96,71.56,71.56,0,0,0,226.76,69ZM160,152a56.14,56.14,0,0,1-27.07-7,8,8,0,0,0-9.92,1.77L67.11,211.51a16,16,0,0,1-22.62-22.62L109.18,133a8,8,0,0,0,1.77-9.93,56,56,0,0,1,58.36-82.31l-31.2,33.81a8,8,0,0,0-1.94,7.1L141.83,108a8,8,0,0,0,6.14,6.14l26.35,5.66a8,8,0,0,0,7.1-1.94l33.81-31.2A56.06,56.06,0,0,1,160,152Z"></path>
+                                        </svg>
+                                        <span>Under construction...</span>
+                                      </div>
                                 </div>
                                 <div class="col-lg-12 col-md-12">
                                     <div class="logos">
+                                        <div class="logo_items">
+                                            <img src="assets/images/animated-slider/css.png">
+                                            <img src="assets/images/animated-slider/html.png">
+                                            <img src="assets/images/animated-slider/jquery.png">
+                                            <img src="assets/images/animated-slider/nextjs.png">
+                                            <img src="assets/images/animated-slider/react.png">
+                                            <img src="assets/images/animated-slider/wordpress.png">
+                                            
+                                        </div>
+                                        <div class="logo_items">
+                                            <img src="assets/images/animated-slider/css.png">
+                                            <img src="assets/images/animated-slider/html.png">
+                                            <img src="assets/images/animated-slider/jquery.png">
+                                            <img src="assets/images/animated-slider/nextjs.png">
+                                            <img src="assets/images/animated-slider/react.png">
+                                            <img src="assets/images/animated-slider/wordpress.png">    
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-12 col-md-12">
+                                    <div class="logos-reverse">
                                         <div class="logo_items">
                                             <img src="assets/images/animated-slider/css.png">
                                             <img src="assets/images/animated-slider/html.png">
@@ -489,22 +528,21 @@
 
         <footer class="container">
             <div class="row">
-                <div class="col-lg-6 col-12-md">
+                <div class="col-6">
                     <div class="copyright">
                         <p>© 2025 Valk7am. All rights reserved.</p>
-                        <p>Unauthorized use and/or duplication of this material without express and written permission from this site’s author is strictly prohibited.</p>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12-md">
+                <div class="col-6">
                     <div class="va-footer-links-container">
                         <div class="va-footer-link-item">
-                            <a href="#" class="va-footer-link"> Soon </a>
+                            <a href="#" class="va-footer-link"> RSS <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 256 256" class="text-xs"><path d="M200,64V168a8,8,0,0,1-16,0V83.31L69.66,197.66a8,8,0,0,1-11.32-11.32L172.69,72H88a8,8,0,0,1,0-16H192A8,8,0,0,1,200,64Z"></path></svg></a>
                         </div>
                         <div class="va-footer-link-item">
-                            <a href="#" class="va-footer-link"> Soon </a>
+                            <a href="#" class="va-footer-link"> Sitemap <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 256 256" class="text-xs"><path d="M200,64V168a8,8,0,0,1-16,0V83.31L69.66,197.66a8,8,0,0,1-11.32-11.32L172.69,72H88a8,8,0,0,1,0-16H192A8,8,0,0,1,200,64Z"></path></svg></a>
                         </div>
                         <div class="va-footer-link-item">
-                            <a href="#" class="va-footer-link"> Soon </a>
+                            <a href="#" class="va-footer-link"> Github <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 256 256" class="text-xs"><path d="M200,64V168a8,8,0,0,1-16,0V83.31L69.66,197.66a8,8,0,0,1-11.32-11.32L172.69,72H88a8,8,0,0,1,0-16H192A8,8,0,0,1,200,64Z"></path></svg> </a>
                         </div>
                     </div>
                 </div>
