Edits some small deatils to make the website easier to read, next patch will be where i break the website to pages to start doing a proper workflow

--- a/index.html
+++ b/index.html
@@ -372,8 +372,10 @@
                         <div class="row g-3">
                             <div class="col-lg-8 col-md-12">
                                 <div class="introduction-text">
-                                    <p>
+                                    <p class="title">
                                         ⚔️ <strong>valk7am – Full-Stack Developer</strong><br>
+                                    </p>
+                                    <p class="sub-title">
                                         <em>Welcome, traveler. You've reached the ground.</em>
                                     </p>
                                     
@@ -393,16 +395,16 @@
                                     
                                     <p>
                                         This space is where I document my journey — from
-                                        <a href="#projects">projects I’ve built
+                                        <a class="show-toggle" href="#" data-target="#Projects">projects I’ve built
                                             <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 256 256" class="text-xs"><path d="M200,64V168a8,8,0,0,1-16,0V83.31L69.66,197.66a8,8,0,0,1-11.32-11.32L172.69,72H88a8,8,0,0,1,0-16H192A8,8,0,0,1,200,64Z"></path></svg>
                                         </a>, to
-                                        <a href="#blog">insights I’m picking up
+                                        <a class="show-toggle" href="#" data-target="#Blogs">insights I’m picking up
                                             <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 256 256" class="text-xs"><path d="M200,64V168a8,8,0,0,1-16,0V83.31L69.66,197.66a8,8,0,0,1-11.32-11.32L172.69,72H88a8,8,0,0,1,0-16H192A8,8,0,0,1,200,64Z"></path></svg>
                                         </a>, and even quick notes in my
-                                        <a href="#til">“Today I Learned” log
+                                        <a class="show-toggle" href="#" data-target="#Blogs">“Today I Learned” log
                                             <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 256 256" class="text-xs"><path d="M200,64V168a8,8,0,0,1-16,0V83.31L69.66,197.66a8,8,0,0,1-11.32-11.32L172.69,72H88a8,8,0,0,1,0-16H192A8,8,0,0,1,200,64Z"></path></svg>
                                         </a>. If you're curious about my background or values,
-                                        feel free to <a href="#about">read more about me
+                                        feel free to <a class="show-toggle" href="#" data-target="#About">read more about me
                                             <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 256 256" class="text-xs"><path d="M200,64V168a8,8,0,0,1-16,0V83.31L69.66,197.66a8,8,0,0,1-11.32-11.32L172.69,72H88a8,8,0,0,1,0-16H192A8,8,0,0,1,200,64Z"></path></svg>
                                         </a>.
                                     </p>
@@ -652,7 +654,7 @@
                                     <div class="details">
                                     <div class="title">
                                             <h4>
-                                                TJC Project
+                                                TJC – Targeting Journalists is a Crime
                                             </h4>
                                     </div> 
                                     <div class="description">
@@ -660,9 +662,23 @@
                                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="23" height="23" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M256 8C119.3 8 8 119.2 8 256c0 136.7 111.3 248 248 248s248-111.3 248-248C504 119.2 392.7 8 256 8zM33 256c0-32.3 6.9-63 19.3-90.7l106.4 291.4C84.3 420.5 33 344.2 33 256zm223 223c-21.9 0-43-3.2-63-9.1l66.9-194.4 68.5 187.8c.5 1.1 1 2.1 1.6 3.1-23.1 8.1-48 12.6-74 12.6zm30.7-327.5c13.4-.7 25.5-2.1 25.5-2.1 12-1.4 10.6-19.1-1.4-18.4 0 0-36.1 2.8-59.4 2.8-21.9 0-58.7-2.8-58.7-2.8-12-.7-13.4 17.7-1.4 18.4 0 0 11.4 1.4 23.4 2.1l34.7 95.2L200.6 393l-81.2-241.5c13.4-.7 25.5-2.1 25.5-2.1 12-1.4 10.6-19.1-1.4-18.4 0 0-36.1 2.8-59.4 2.8-4.2 0-9.1-.1-14.4-.3C109.6 73 178.1 33 256 33c58 0 110.9 22.2 150.6 58.5-1-.1-1.9-.2-2.9-.2-21.9 0-37.4 19.1-37.4 39.6 0 18.4 10.6 33.9 21.9 52.3 8.5 14.8 18.4 33.9 18.4 61.5 0 19.1-7.3 41.2-17 72.1l-22.2 74.3-80.7-239.6zm81.4 297.2l68.1-196.9c12.7-31.8 17-57.2 17-79.9 0-8.2-.5-15.8-1.5-22.9 17.4 31.8 27.3 68.2 27.3 107 0 82.3-44.6 154.1-110.9 192.7z"/></svg>
                                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="23" height="23" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M448 96c0-35.3-28.7-64-64-64H64C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96zM180.9 444.9c-33.7 0-53.2-17.4-63.2-38.5L152 385.7c6.6 11.7 12.6 21.6 27.1 21.6c13.8 0 22.6-5.4 22.6-26.5V237.7h42.1V381.4c0 43.6-25.6 63.5-62.9 63.5zm85.8-43L301 382.1c9 14.7 20.8 25.6 41.5 25.6c17.4 0 28.6-8.7 28.6-20.8c0-14.4-11.4-19.5-30.7-28l-10.5-4.5c-30.4-12.9-50.5-29.2-50.5-63.5c0-31.6 24.1-55.6 61.6-55.6c26.8 0 46 9.3 59.8 33.7L368 290c-7.2-12.9-15-18-27.1-18c-12.3 0-20.1 7.8-20.1 18c0 12.6 7.8 17.7 25.9 25.6l10.5 4.5c35.8 15.3 55.9 31 55.9 66.2c0 37.8-29.8 58.6-69.7 58.6c-39.1 0-64.4-18.6-76.7-43z"/></svg>    
                                             </div>
-                                            <span>                                    
-                                                The TJC initiative is a collective project aimed at raising awareness and accountability about the targeting of journalists globally.
-                                            </span>
+                                            <p>
+                                                An international coalition of media outlets, legal bodies, and rights groups standing against violence, censorship, and surveillance targeting journalists. The platform brings together investigative reports, legal resources, and advocacy content in one place.
+                                            </p>
+                                                <ul>
+                                                    <li>
+                                                        Deployed full server environment (subscription, Apache setup, CMS)
+                                                    </li>
+                                                    <li>
+                                                        Customized backend and database integration
+                                                    </li>
+                                                    <li>
+                                                        Designed and developed the front-end from scratch
+                                                    </li>
+                                                    <li>
+                                                        Ensured responsive, accessible design for all user types
+                                                    </li>
+                                                </ul>
                                     </div> 
                                     </div>
                                 </div>
@@ -685,10 +701,23 @@
                                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="23" height="23" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M256 8C119.3 8 8 119.2 8 256c0 136.7 111.3 248 248 248s248-111.3 248-248C504 119.2 392.7 8 256 8zM33 256c0-32.3 6.9-63 19.3-90.7l106.4 291.4C84.3 420.5 33 344.2 33 256zm223 223c-21.9 0-43-3.2-63-9.1l66.9-194.4 68.5 187.8c.5 1.1 1 2.1 1.6 3.1-23.1 8.1-48 12.6-74 12.6zm30.7-327.5c13.4-.7 25.5-2.1 25.5-2.1 12-1.4 10.6-19.1-1.4-18.4 0 0-36.1 2.8-59.4 2.8-21.9 0-58.7-2.8-58.7-2.8-12-.7-13.4 17.7-1.4 18.4 0 0 11.4 1.4 23.4 2.1l34.7 95.2L200.6 393l-81.2-241.5c13.4-.7 25.5-2.1 25.5-2.1 12-1.4 10.6-19.1-1.4-18.4 0 0-36.1 2.8-59.4 2.8-4.2 0-9.1-.1-14.4-.3C109.6 73 178.1 33 256 33c58 0 110.9 22.2 150.6 58.5-1-.1-1.9-.2-2.9-.2-21.9 0-37.4 19.1-37.4 39.6 0 18.4 10.6 33.9 21.9 52.3 8.5 14.8 18.4 33.9 18.4 61.5 0 19.1-7.3 41.2-17 72.1l-22.2 74.3-80.7-239.6zm81.4 297.2l68.1-196.9c12.7-31.8 17-57.2 17-79.9 0-8.2-.5-15.8-1.5-22.9 17.4 31.8 27.3 68.2 27.3 107 0 82.3-44.6 154.1-110.9 192.7z"/></svg>
                                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="23" height="23" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M448 96c0-35.3-28.7-64-64-64H64C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96zM180.9 444.9c-33.7 0-53.2-17.4-63.2-38.5L152 385.7c6.6 11.7 12.6 21.6 27.1 21.6c13.8 0 22.6-5.4 22.6-26.5V237.7h42.1V381.4c0 43.6-25.6 63.5-62.9 63.5zm85.8-43L301 382.1c9 14.7 20.8 25.6 41.5 25.6c17.4 0 28.6-8.7 28.6-20.8c0-14.4-11.4-19.5-30.7-28l-10.5-4.5c-30.4-12.9-50.5-29.2-50.5-63.5c0-31.6 24.1-55.6 61.6-55.6c26.8 0 46 9.3 59.8 33.7L368 290c-7.2-12.9-15-18-27.1-18c-12.3 0-20.1 7.8-20.1 18c0 12.6 7.8 17.7 25.9 25.6l10.5 4.5c35.8 15.3 55.9 31 55.9 66.2c0 37.8-29.8 58.6-69.7 58.6c-39.1 0-64.4-18.6-76.7-43z"/></svg>    
                                             </div>
-                                            <span>
-                                                this my letast project that covers a very nice aspect of the my talent in creating amazing websites.
-                                            </span>
-                                    </div> 
+                                            <p>
+                                                A custom conference website built to spotlight urgent political topics.
+
+                                                The most recent edition:
+                                                “From the War on Gaza to Change in Syria: Shifting Dynamics in the Middle East”.
+
+                                                My Role:
+                                            </p>
+                                            <ul>
+                                                <li>
+                                                    Customized and implemented the front-end to match creative team designs
+                                                </li>
+                                                <li>
+                                                    Ensured pixel-perfect execution of layout, typography, and color schemes
+                                                </li>
+                                            </ul>
+                                        </div> 
                                     </div>
                                 </div>
                             </a>
